[tool.poetry]
name = "interview-sudoku-python"
version = "0.1.0"
description = ""
authors = ["Javier López Ruiz <javier.lopez@spartacommodities.com>"]
readme = "README.md"
packages = [{include = "interview_sudoku_python"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
